Updated Swagger spec to support new site_id filter. Changed format of array items in query strings to comman-separated. Regenerated code.
